added isMerchant as a user, now it is showing different page of user and merchant

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node index.js",
     "backend": "nodemon index.js",
     "frontend": "cd client && npm start",
-    "dev": "concurrently \"npm run backend\" \"npm run frontend\""
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "build-client": "cd client && npm run build"
   },
   "author": "Pradip",
   "license": "ISC",
