--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "browser-image-compression": "^2.0.2",
     "framer-motion": "^10.12.17",
     "overlay-navbar": "^1.2.3",
     "razorpay": "^2.8.6",
@@ -23,6 +24,7 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
