--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
